update Blog formatting; fix CV tab spacing w/ responsive design

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ nav {
 
 .nav-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     font-size: 18px;
     margin: 20px 0 20px 0; /* hard-coded for now */
@@ -37,8 +37,10 @@ nav {
     display: flex;
     justify-content: center;
     list-style: none;
-    margin: 0;
-    flex-grow: 1;
+    margin: 0 auto;
+    padding: 0;
+    /*flex-grow: 1;*/
+    /*gap: 5px;*/
 }
 
 .nav-links li {
@@ -274,6 +276,15 @@ main .container {
     font-weight: bold;
 }
 
+.blog-posts a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.blog-posts a:hover {
+    text-decoration: underline;
+}
+
 .blog-posts a:visited {
     color: black;
 }
@@ -478,6 +489,17 @@ ul {
 }
 
 /* Laptop */
+/*@media (max-width: 900px) {
+    .education .sub-container {
+        flex-direction: column;
+    }
+    .education .sub-container .institution:not(:last-child) {
+        margin-bottom: 30px;
+        padding-bottom: 0;
+    }
+}
+*/
+
 @media (max-width: 1000px) {
     aside {
         width: 100%;
@@ -488,6 +510,13 @@ ul {
     #profile-pic {
         padding-left: 15px;
         padding-right: 15px;
+    }
+    .education .sub-container {
+        flex-direction: column;
+    }
+    .education .sub-container .institution:not(:last-child) {
+        margin-bottom: 30px;
+        padding-bottom: 0;
     }
 }
 
